# list-update-test

./: CMakeLists.txt  README.md
src/: MyView.qml  main.cpp  main.qml  mymodel.cpp  mymodel.h  resources.qrc  store.h
